--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>med</title>
+    <title>MedTech</title>
   </head>
   <body>
     <div id="root"></div>
